Fix contrast issues

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -11956,4 +11956,8 @@ footer .list-inline-item {
   margin: 0 10px;
 }
 
+p {
+  color: #fff;
+}
+
 /*# sourceMappingURL=style.css.map */
