--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -109,3 +109,7 @@ footer .list-inline-item {
   display: inline;
   margin: 0 10px;
 }
+
+p {
+  color: #fff;
+}
